# AetherGL

./: CMakeLists.txt  README.md  TERRAIN_FIX_SUMMARY.md  report.txt
shaders/: atmosphere_fragment.glsl  atmosphere_vertex.glsl  blur_fragment.glsl  bright_pass_fragment.glsl  debug_postprocess_fragment.glsl  final_postprocess_fragment.glsl  fragment.glsl  pbr_terrain_fragment.glsl  quad_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  terrain_fragment.glsl  terrain_vertex.glsl  vertex.glsl
src/: main.cpp
src/include/: Camera.cpp  Camera.h  ControlPanel.cpp  ControlPanel.h  GUIManager.cpp  GUIManager.h  HDRLoader.cpp  HDRLoader.h  LightingConfig.cpp  LightingConfig.h  Mesh.cpp  Mesh.h  NoiseGenerator.cpp  NoiseGenerator.h  ObjLoader.cpp  ObjLoader.h  ObjWriter.cpp  ObjWriter.h  PostProcessor.cpp  PostProcessor.h  Shader.cpp  Shader.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainRenderer.cpp  TerrainRenderer.h  TerrainViewer.cpp  TerrainViewer.h
